--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -78,6 +78,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/resumex-${{ env.VERSION }}.tar.gz
-          asset_name: resumex-${{ env.VERSION }}.tar.gz
+          asset_path: ./dist/levelup-${{ env.VERSION }}.tar.gz
+          asset_name: levelup-${{ env.VERSION }}.tar.gz
           asset_content_type: application/gzip
