refactor: move missing files

--- a/levelup/alembic.ini
+++ b/levelup/alembic.ini
@@ -5,7 +5,7 @@
 file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(rev)s
 
 [core]
-script_location = resumex:database/alembic/versions
+script_location = levelup:database/alembic/versions
 
 # timezone to use when rendering the date
 # within the migration file as well as the filename.
