--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "sqlalchemy-utils>=0.42.0",
     "starlette>=0.49.1",
     "streamlit>=1.51.0",
+    "pytest-mock==3.15.1"
 ]
 
 [dependency-groups]
