--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,14 @@ dependencies = [
     "metatron>=0.5",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.3",
-    "pypdf>=6.1.3",
     "sentry-sdk>=2.43.0",
     "slowapi>=0.1.9",
     "sqlalchemy>=2.0.44",
     "sqlalchemy-utils>=0.42.0",
     "starlette>=0.49.1",
     "streamlit>=1.51.0",
-    "pytest-mock==3.15.1"
+    "pytest-mock==3.15.1",
+    "pdfplumber==0.11.8"
 ]
 
 [dependency-groups]
@@ -166,7 +166,6 @@ module = [
     "google.generativeai.*",
     "streamlit.*",
     "metatron.*",
-    "pypdf.*",
     "chromedriver_autoinstaller.*",
     "selenium.*",
     "trafilatura.*",
